tests/snapshots/examples_fixtures/type_system__failing__46_duplicate_main_function.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/46_duplicate_main_function.flx
== compile ==
failed (compile)
== diagnostics ==
error[E410]: Duplicate Main Function

Program can contain only one top-level `fn main`.

  examples/type_system/failing/46_duplicate_main_function.flx:32:1
   |
28 | fn main() {
   | --------- first `main` declared here
29 |     1
30 | }
31 | 
32 | fn main() {
   | ^^^^^^^^^
   | --------- duplicate `main` declaration

Hint:
  Keep a single `fn main` entry point.
== stdout ==
<not executed>
